--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "project-files",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/johngorm/FitFriendFinder/issues"
   },
-  "homepage": "https://github.com/johngorm/FitFriendFinder#readme"
+  "homepage": "https://github.com/johngorm/FitFriendFinder#readme",
+  "dependencies": {
+    "express": "^4.15.3"
+  },
+  "devDependencies": {},
+  "description": ""
 }
