--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/johngorm/FitFriendFinder#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "method-override": "^2.3.9"
   },
   "devDependencies": {},
   "description": ""
